<resources>

    <string name="app_name">TruTribe</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="input_username">Type your Username</string>
    <string name="input_password">Type your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_ques">Don\'t have an account?</string>
    <string name="sign_up">SignUpPage</string>
    <string name="signup">Sign Up</string>
    <string name="email">User Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_icon">Profile icon</string>
    <string name="lock_icon">Lock icon</string>

    <string name="back_arrow">back_arrow</string>
    <string name="three_dash">three_dash</string>
    <string name="coming_soon">Coming Soon\.\.\.</string>
    <string name="search">Search</string>
    <string name="trending_communities">Trending Communities</string>
    <string name="suggested_communities">Suggested Communities</string>
    <string name="my_communities">My Communities</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="placeholder_img">Placeholder_img</string>
    <string name="profile_fragment_ncoming_soon">Profile Fragment\nComing Soon...</string>
    <string name="notification_fragment_ncoming_soon">Notification Fragment\nComing Soon...</string>
    <string name="home_fragment_ncoming_soon">Home Fragment\nComing Soon...</string>
    <string name="congratulations">Congratulations!</string>
    <string name="success">Success</string>
    <string name="success_message_join">You have Successfully passed the Quiz and joined the Community!</string>
    <string name="continue_btn">Continue</string>
    <string name="cross_btn">cross_button</string>
    <string name="failed">Failed</string>
    <string name="oops_sorry">OOPS ! Sorry !</string>
    <string name="not_passed">You have not passsed the quiz. You Scored</string>
    <string name="back">Back</string>
    <string name="try_again">Try Again</string>
</resources>
