<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/TruTribe"
        android:layout_width="152dp"
        android:layout_height="50dp"


        android:layout_marginBottom="5dp"
        android:fontFamily="@font/italiana_regular"

        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textSize="32sp"
        android:layout_marginBottom="35dp"

        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"

android:textColor="@color/black"
        android:text="@string/username"/>

    <LinearLayout
        android:id="@+id/input_box"

        android:background="@drawable/input_purple_box"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/user"
            android:contentDescription="@string/profile_icon"
            android:scaleType="fitXY"
            android:layout_marginHorizontal="11dp"
            android:layout_gravity="center"

            />

        <EditText
            android:layout_width="225dp"
            android:autofillHints="name"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/input_username"
            android:background="@null"
            android:id="@+id/input_username"
            android:textColor="#000000"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            />
</LinearLayout>


<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="20sp"
android:layout_marginTop="18dp"

    android:layout_marginBottom="10dp"
android:text="@string/password"
    android:textColor="@color/black"/>


<LinearLayout
android:id="@+id/input_password_box"

android:background="@drawable/input_blue_box"
android:layout_height="wrap_content"
android:layout_width="wrap_content">

<ImageView
    android:layout_width="25dp"
    android:layout_height="25dp"
    android:src="@drawable/lock"
    android:contentDescription="@string/lock_icon"
    android:scaleType="fitXY"
    android:layout_marginHorizontal="11dp"
    android:layout_gravity="center"
    />

<EditText
    android:layout_width="225dp"
    android:autofillHints="password"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="@string/input_password"
    android:background="@null"
    android:id="@+id/input_password"
    android:textColor="#000000"
    android:textSize="16sp"
    android:paddingVertical="15dp"
    />
</LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
             >
        </TextView>

    </LinearLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="286dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="20dp" />






    <TextView
    android:layout_width="261dp"
    android:layout_height="18dp"
    android:text="@string/account_ques"
    android:textSize="15sp"

    android:paddingEnd="0dp"
    android:paddingStart="10dp"
    android:layout_gravity="center"

    android:layout_marginTop="30dp"
    android:textColor="@color/black"
    >


</TextView>


    <Button
        android:id="@+id/signup_button"
        android:text="@string/signup"
        android:layout_width="286dp"
        android:layout_height="62dp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/light_pink"
        app:cornerRadius="20dp"/>


</LinearLayout>
