<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="18dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/round_arrow_back_24"
                android:contentDescription="@string/back_arrow"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/baseline_dehaze_24"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/three_dash"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="30sp"
                    android:fontFamily="@font/italiana_regular"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>



    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/tablayout"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">





            <TextView
                android:id="@+id/community_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="15sp"
                android:gravity="end"
                android:textColor="@color/red"
                app:drawableTopCompat="@drawable/_icon__timer" />

        </LinearLayout>


        <ProgressBar
            android:id="@+id/progress_calculate"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_gravity="center_horizontal"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/progress_bar"
            />



        </LinearLayout>


    </FrameLayout>















    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        android:layout_alignParentBottom="true"
        app:tabIconTint="@null"
        app:tabIndicatorHeight="0dp"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/search" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/notification" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/profile" />


    </com.google.android.material.tabs.TabLayout>


</RelativeLayout>
